# ReflowOvenFirmware

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
Resources/: ReflowOven.make
frontend/: index.html  package-lock.json  package.json
frontend/scripts/: build-for-firmware.mjs  mock-server.mjs
frontend/src/: App.tsx  api.ts  styles.css  types.ts  ws.ts
frontend/src/pages/: DashboardPage.tsx  DataPage.tsx  ProfilesPage.tsx  SettingsHomePage.tsx
frontend/src/pages/settings/: ControllerSettingsPage.tsx  DataSettingsPage.tsx  DoorCalibrationSettingsPage.tsx  TimeSettingsPage.tsx  WifiSettingsPage.tsx
main/: CMakeLists.txt
main/include/: Controller.hpp  DataManager.hpp  HardwareManager.hpp  PID.hpp  PWM.hpp  ProfileEngine.hpp  SettingsManager.hpp  TimeManager.hpp  WebServerManager.hpp  WiFiManager.hpp  app.hpp
main/src/: Controller.cpp  DataManager.cpp  HardwareManager.cpp  PID.cpp  PWM.cpp  ProfileEngine.cpp  SettingsManager.cpp  TimeManager.cpp  WebServerManager.cpp  WiFiManager.cpp  app.cpp  main.cpp
main/webui/: index.html
main/webui/assets/: index-BE5jaQdZ.js  index-BGjX7JYH.css  index-BKV2ZUDE.js  index-BRgg0TOb.js  index-C8vYVyNw.js  index-D2dCZpAc.js  index-DtGP5Ehf.js  index-sWdI6isw.js
