idf_component_register(
    SRCS
        "src/main.cpp"
        "src/HardwareManager.cpp"
        "src/PWM.cpp"
        "src/PID.cpp"
        "src/Controller.cpp"
        "src/app.cpp"
        "src/SettingsManager.cpp"
        "src/DataManager.cpp"
        "src/WiFiManager.cpp"
        "src/TimeManager.cpp"
    INCLUDE_DIRS
        "include"
)
